feat: add new animation and optimizations

--- a/ui/translations/en/en.json
+++ b/ui/translations/en/en.json
@@ -2,7 +2,7 @@
   "language": "Language",
   "MYTRIP": {
     "NO_TRIPS_PLANNED": "No trips planned yet",
-    "START_NEW_TRIP": "Start New Trip",
+    "START_NEW_TRIP": "New Trip",
     "TITLE": "My Trips"
   },
   "DISCOVER": {
