--- a/ui/translations/it/it.json
+++ b/ui/translations/it/it.json
@@ -2,7 +2,7 @@
   "language": "Lingua",
   "MYTRIP": {
     "NO_TRIPS_PLANNED": "Nessun viaggio pianificato",
-    "START_NEW_TRIP": "Inizia un nuovo viaggio",
+    "START_NEW_TRIP": "Nuovo viaggio",
     "TITLE": "Viaggi"
   },
   "DISCOVER": {
