feat: add partecipants button and general improvements

--- a/ui/translations/it/it.json
+++ b/ui/translations/it/it.json
@@ -36,6 +36,7 @@
   "SEARCH_PLACE_PAGE": {
     "TITLE": "Cerca",
     "DESCRIPTION": "Cerca la tua prossima destinazione!",
-    "SEARCH_PLACE": "Cerca luogo"
+    "SEARCH_PLACE": "Cerca luogo",
+    "PARTECIPANTS": "Seleziona i partecipanti"
   }
 }
