--- a/ui/translations/en/en.json
+++ b/ui/translations/en/en.json
@@ -36,6 +36,7 @@
   "SEARCH_PLACE_PAGE": {
     "TITLE": "Search",
     "DESCRIPTION": "Search your next destination!",
-    "SEARCH_PLACE": "Search Place"
+    "SEARCH_PLACE": "Search Place",
+    "PARTECIPANTS": "Select partecipants"
   }
 }
