--- a/ui/translations/it/it.json
+++ b/ui/translations/it/it.json
@@ -21,7 +21,8 @@
     "CREATE_ACCOUNT": "Crea un account",
     "TITLE": "Accedi",
     "RESET_PASSWORD": "Hai dimenticato la password?",
-    "RESET_PASSWORD_TITLE": "Reimposta la password"
+    "RESET_PASSWORD_TITLE": "Reimposta la password",
+    "RESET_PASSWORD_SENT": "Email di reimpostazione password inviata"
   },
   "SIGNUP": {
     "TITLE": "Registrati",
@@ -31,7 +32,11 @@
     "EMAIL": "Email",
     "EMAIL_PLACEHOLDER": "Inserisci la tua email",
     "PASSWORD": "Password",
-    "PASSWORD_PLACEHOLDER": "Inserisci la tua password"
+    "PASSWORD_PLACEHOLDER": "Inserisci la tua password",
+    "CONFIRM_PASSWORD": "Conferma password",
+    "CONFIRM_PASSWORD_PLACEHOLDER": "Conferma la tua password",
+    "EMAIL_VERIFICATION_TITLE": "Verifica la tua email",
+    "EMAIL_VERIFICATION_DESCRIPTION": "Per completare il processo di registrazione, ti abbiamo inviato un'email di verifica. Per favore, controlla la tua email e clicca sul link per completare il processo di registrazione."
   },
   "SEARCH_PLACE_PAGE": {
     "TITLE": "Cerca",
@@ -83,6 +88,10 @@
     "BUTTON": {
       "CONFIRM": "Conferma",
       "CANCEL": "Annulla"
+    },
+    "ERROR": {
+      "INVALID_CREDENTIALS": "Credenziali non valide",
+      "INVALID_EMAIL": "Email non valida"
     }
   }
 }
