fix: scroll view and custom header

--- a/ui/translations/it/it.json
+++ b/ui/translations/it/it.json
@@ -4,7 +4,7 @@
     "NO_TRIPS_PLANNED": "Nessun viaggio pianificato",
     "START_NEW_TRIP": "Nuovo viaggio",
     "NEWEST_DESTINATIONS": "Destinazioni più recenti",
-    "TITLE": "Viaggi"
+    "TITLE": "I miei viaggi"
   },
   "PROFILE": {
     "TITLE": "Profilo"
