--- a/ui/translations/en/en.json
+++ b/ui/translations/en/en.json
@@ -3,7 +3,11 @@
     "NO_TRIPS_PLANNED": "No trips planned yet",
     "START_NEW_TRIP": "New Trip",
     "NEWEST_DESTINATIONS": "Newest destinations",
-    "TITLE": "My Trips"
+    "TITLE": "My Trips",
+    "CREATE_NEW_TRIP": "Create new trip",
+    "SHOW_ALL_TRIPS": "Show all trips",
+    "TRIP_DETAILS": "Trip Details",
+    "BUDGET_NOT_AVAILABLE": "Budget not available"
   },
   "PROFILE": {
     "TITLE": "Profile",
