fix: lint error

--- a/ui/translations/it/it.json
+++ b/ui/translations/it/it.json
@@ -7,7 +7,8 @@
     "CREATE_NEW_TRIP": "Crea nuovo viaggio",
     "SHOW_ALL_TRIPS": "Mostra tutti i viaggi",
     "TRIP_DETAILS": "Dettagli viaggio",
-    "BUDGET_NOT_AVAILABLE": "Budget non disponibile"
+    "BUDGET_NOT_AVAILABLE": "Budget non disponibile",
+    "DAYS": "Giorni"
   },
   "PROFILE": {
     "TITLE": "Profilo",
