--- a/ui/translations/en/en.json
+++ b/ui/translations/en/en.json
@@ -7,7 +7,8 @@
     "CREATE_NEW_TRIP": "Create new trip",
     "SHOW_ALL_TRIPS": "Show all trips",
     "TRIP_DETAILS": "Trip Details",
-    "BUDGET_NOT_AVAILABLE": "Budget not available"
+    "BUDGET_NOT_AVAILABLE": "Budget not available",
+    "DAYS": "Days"
   },
   "PROFILE": {
     "TITLE": "Profile",
