--- a/ui/translations/it/it.json
+++ b/ui/translations/it/it.json
@@ -8,7 +8,8 @@
     "SHOW_ALL_TRIPS": "Mostra tutti i viaggi",
     "TRIP_DETAILS": "Dettagli viaggio",
     "BUDGET_NOT_AVAILABLE": "Budget non disponibile",
-    "DAYS": "Giorni"
+    "DAYS": "Giorni",
+    "DAY": "GIORNO"
   },
   "PROFILE": {
     "TITLE": "Profilo",
