feat: welcome page new intro text

--- a/ui/translations/en/en.json
+++ b/ui/translations/en/en.json
@@ -31,7 +31,7 @@
     }
   },
   "WELCOME": {
-    "TITLE": "Effortlessly plan your trips with AI at your fingertips!",
+    "TITLE": "Effortlessly plan your dream trips with AI at your fingertips!",
     "BUTTON": "GET STARTED"
   },
   "SIGNIN": {
