--- a/ui/translations/it/it.json
+++ b/ui/translations/it/it.json
@@ -31,7 +31,7 @@
     }
   },
   "WELCOME": {
-    "TITLE": "Pianifica i tuoi viaggi senza sforzo con l'AI a portata di mano!",
+    "TITLE": "Pianifica i tuoi viaggi da sogno senza sforzo con l'intelligenza artificiale a portata di mano!",
     "BUTTON": "INIZIA"
   },
   "SIGNIN": {
