feat: add basic information for the activity detail page

--- a/ui/translations/en/en.json
+++ b/ui/translations/en/en.json
@@ -12,6 +12,12 @@
     "DAYS_plural": "Days",
     "DAY": "DAY"
   },
+  "ACTIVITY_DETAILS": {
+    "USEFUL_TIPS": "Useful Tips",
+    "BEST_TIME_TO_VISIT": "Best Time to Visit",
+    "TICKET_PRICING": "Ticket Pricing",
+    "PRICE_ALERT": "Prices may vary, do not rely solely on this information and do your own research."
+  },
   "PROFILE": {
     "TITLE": "Profile",
     "LABEL": {
