--- a/ui/translations/it/it.json
+++ b/ui/translations/it/it.json
@@ -12,6 +12,12 @@
     "DAYS_plural": "Giorni",
     "DAY": "GIORNO"
   },
+  "ACTIVITY_DETAILS": {
+    "USEFUL_TIPS": "Consigli utili",
+    "BEST_TIME_TO_VISIT": "Miglior momento per visitare",
+    "TICKET_PRICING": "Prezzo del biglietto",
+    "PRICE_ALERT": "I prezzi possono variare, non affidarti esclusivamente a queste informazioni e fai le opportune verifiche."
+  },
   "PROFILE": {
     "TITLE": "Profilo",
     "LABEL": {
